--- a/gestionit/src/app/app.component.html
+++ b/gestionit/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="app_auth">
+<div class="app_auth" *ngIf="!isLoggedIn">
   <app-authentification></app-authentification>
+</div>
+<div>
+  <router-outlet></router-outlet>
 </div>
