--- a/gestionit/src/app/app.component.html
+++ b/gestionit/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="app_auth" *ngIf="!isLoggedIn">
+<div class="app_auth" *ngIf="!isLoggedIn; else connectedBlock">
   <app-authentification></app-authentification>
 </div>
-<div>
+<ng-template #connectedBlock>
   <router-outlet></router-outlet>
-</div>
+</ng-template>
